--- a/index.html
+++ b/index.html
@@ -17,14 +17,22 @@
 </head>
 <body>
      <header>
-        <div>
+        <div class="titulo">
             <h1>AMAZING MOUNTAIN</h1>
         </div>
         <div class="contato">
-            <h3>SKI</h3>
-            <h3>GOLF</h3>
-            <h3>HIKING</h3>
-            <h3>CONTACT</h3>
+           <ul class="lista">
+            <li>SKI</li>
+            <li>GOLF</li>
+            <li>HIKING</li>
+            <li>CONTACT</li>
+           </ul>
+        </div>
+        <div class="nuvem">
+            <img src="./img/noun_weather_2381849 1.png" alt="Nuvem" class="nuvem_img">
+        </div>
+        <div class="temp">
+
         </div>
      </header>
 </body>
