--- a/index.html
+++ b/index.html
@@ -22,17 +22,21 @@
         </div>
         <div class="contato">
            <ul class="lista">
-            <li>SKI</li>
-            <li>GOLF</li>
-            <li>HIKING</li>
-            <li>CONTACT</li>
+            <li><strong>SKI</strong></li>
+            <li><strong>GOLF</strong></li>
+            <li><strong>HIKING</strong></li>
+            <li><strong>CONTACT</strong></li>
            </ul>
         </div>
         <div class="nuvem">
             <img src="./img/noun_weather_2381849 1.png" alt="Nuvem" class="nuvem_img">
         </div>
         <div class="temp">
-
+            <h3 class="c1">Current weather</h3>
+            <h4 class="h4-1">-6°C</h4>
+            <div class="div_temp"></div>
+            <h3 class="c2">Recent snowfall</h3>
+            <h4 class="h4-2">35cm</h4>
         </div>
      </header>
 </body>
