--- a/index.html
+++ b/index.html
@@ -39,5 +39,14 @@
             <h4 class="h4-2">35cm</h4>
         </div>
      </header>
+
+     <h1 class="titulo_2"><strong>Get next years pass now to save</strong></h1>
+     <p class="texto">If it's too steep, you're too old. Straight shot shane mcconkey lookout pass snowmass bode miller freestyle tree well durango corn snow bromley mountain. Stockli st moritz sundown ripping the bumps swix chowder boreal suzy chaffee bumps hospital air kastle.</p>
+
+     <div class="btns">
+     <button class="btn1">Get a seasons pass</button>
+     <button class="btn2"><strong>Get tickets</strong></button>  
+    </div>
+
 </body>
 </html>
